# Sunny-Flowers

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml  rust.yml
k8s/: deployment.yml
src/: checks.rs  commands.rs  discord.rs  handlers.rs  hooks.rs  main.rs  structs.rs  utils.rs
src/effects/: deafen.rs  display_queue.rs  join.rs  leave.rs  mod.rs  now_playing.rs  pause.rs  play.rs  queue.rs  resume.rs  skip.rs
src/effects/queue/: mod.rs  pause.rs  play.rs  remove_at.rs  resume.rs  shuffle.rs  skip.rs  stop.rs  swap.rs
