[package]
name = "sunny_flowers"
version = "0.4.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
serenity = { version = "0.10", features = [
    "client",
    "standard_framework",
    "voice",
]}
songbird = { version = "0.2", features = ["builtin-queue"] }
tokio = { version = "1.11", features = ["macros", "rt-multi-thread", "signal"] }
