[package]
name = "sunny_flowers"
version = "0.6.1"
edition = "2018"
authors = [
    "Sophie <tileyratkins@gmail.com>",
    "Victor Roest <victor@xirion.net>"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
serenity = { version = "0.10", features = [
    "client",
    "standard_framework",
    "voice",
]}
songbird = { version = "0.2", features = ["builtin-queue"] }
tokio = { version = "1.11", features = ["macros", "rt-multi-thread", "signal"] }
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
