[package]
name = "sunny_flowers"
version = "0.14.2"
edition = "2018"
authors = [
    "Sophie <tileyratkins@gmail.com>",
    "Victor Roest <victor@xirion.net>"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
serenity = { version = "0.10", features = [
    "client",
    "standard_framework",
    "voice",
    "unstable_discord_api",
    "collector"
]}
songbird = { version = "0.2", features = ["builtin-queue"] }
tokio = { version = "1.11", features = ["macros", "rt-multi-thread", "signal"] }
chrono = "0.4"
url = "2"
rand = {version = "0.8", features = ["small_rng"]}
once_cell = "1.8"

[profile.release]
opt-level = 3
lto = true
